Added grummy cat

--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <body>
     <h1>Тут структура сторінки</h1>
     <img src="img/cat1.jpg" alt="black cat">
+    <img src="img/cat2.png" alt="grummy cat">
 </body>
 </html>
