--- a/index.html
+++ b/index.html
@@ -7,8 +7,19 @@
     <title>Робота з GIT</title>
 </head>
 <body>
-    <h1>Тут структура сторінки</h1>
-    <img src="img/cat1.jpg" alt="black cat">
-    <img src="img/cat2.png" alt="grummy cat">
+    <div class="swipe left">
+            &lt;
+    </div>
+    <div class="container">
+        <img src="img/cat1.jpg" alt="black cat">
+        <div class="content">
+            <h2>Йоркська шоколадна кішка</h2>
+            <p>30 000 грн.</p>
+            <a href="#" class="btn">Дізнатися більше</a>
+        </div>
+    </div>
+    <div class="swipe right">
+        &gt;
+    </div>
 </body>
 </html>
